--- a/3_Vasculature_Analysis/1_Blood_Vessel_Segmentation.ipynb
+++ b/3_Vasculature_Analysis/1_Blood_Vessel_Segmentation.ipynb
@@ -397,7 +397,7 @@
     "        \"--save_probabilities\"\n",
     "    ]\n",
     "\n",
-    "    cmd = [\"conda\", \"run\", \"-p\", \"/research/sharedresources/cbi/public/conda_envs/nnunet\"] + cmd\n",
+    "    cmd = [\"conda\", \"run\", \"-p\", \"\"] + cmd\n",
     "\n",
     "    result = ' '.join(cmd)\n",
     "    print(\"command is\", result)\n",
